# kn_girls_day_24

./: README.md  get_data.py  package-lock.json  pyproject.toml
data/: README.md  data.csv  uris.csv
kn_girls_day_24/: get_billboard_data.py  get_spotify_data.py  loesung.ipynb  pipelines.py  test.ipynb  uebung.ipynb
tests/: test_get_data.py  test_search_track.py  test_spotify_request.py
